# CivicQ

./: DESIGN_DOC.txt  README.md
cpp/: CMakeLists.txt
cpp/include/: simulation.hpp
cpp/src/: main.cpp  simulation.cpp
python/: optimizer.py
